# workout-tracker

./: .prettierrc  README.md  package-lock.json  package.json  rollup.config.js
client/: index.html  package-lock.json  package.json  vite.config.ts
client/lib/: date.ts  store.ts
client/lib/api/: service.ts  types.ts
client/lib/components/: ExerciseList.svelte  LoadingBanner.svelte  Modal.svelte  MultilineInput.svelte  SearchSets.svelte  SetForm.svelte  Statistics.svelte  Timer.svelte  UpDownArrow.svelte  WorkoutInfo.svelte  WorkoutList.svelte
client/lib/i18n/: de.json  en.json  index.ts
client/src/: App.svelte  app.css  main.ts
lib/: Title.svelte  WorkoutList.svelte
lib/api/: service.ts
lib/components/: Button.svelte  Modal.svelte  NewSet.svelte  Notification.svelte  SetForm.svelte  WorkoutInfo.svelte  WorkoutList.svelte
server/: Cargo.toml  Cross.toml  go.mod  go.sum  main.go
server/api/: api.go  exercise.go  http.go  set.go  static.go  workout.go
server/migrations/: 20230128220930_initial.down.sql  20230128220930_initial.up.sql  20230129185633_add_note.down.sql  20230129185633_add_note.up.sql  20230211172201_initial.down.sql  20230211172201_initial.up.sql  20230228174708_add_workout_note.down.sql  20230228174708_add_workout_note.up.sql  schema.sql
server/repository/: exercise.go  set.go  statistics.go  workout.go
server/repository/sqlite/: sqlite.go
server/src/: dal.rs  main.rs  server.rs
src/: App.svelte
