[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
axum = { version = "0.6.4", features = ["json"] }
chrono = "0.4.23"
include_dir = "0.7.3"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.25.0", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "trace", "request-id"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
